# claude-tetration

./: .gitignore  Cargo.toml  FAILURE_CASES.md
examples/: edge_runner.rs  grid_runner.rs  test_w0.rs
src/: cnum.rs  dispatch.rs  fft.rs  integer_height.rs  kouznetsov.rs  lambertw.rs  lib.rs  linear_approx.rs  main.rs  regions.rs  schroder.rs
tests/: phase1.rs  phase2_lambertw.rs  phase3_regions.rs  phase4_schroder.rs  phase5_outside.rs  phase7_cli.rs  phase8_verification.rs
